Fix overflow width of the app

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -10,8 +10,6 @@ body {
   .App {
     display: flex;
     flex-direction: column;
-    // height: 100vh;
-    width: 100vw;
-    // overflow: hidden;
+    width: 100%;
   }
 }
